# ACore

./: .gitignore  README.md
allocator/: Cargo.toml
allocator/src/: buddy_allocator.rs  lib.rs  linked_list.rs
os/: Cargo.toml  Makefile  build.rs
os/src/: config.rs  entry.asm  lang_items.rs  linker.ld  loader.rs  main.rs
os/src/drivers/: mod.rs  uart.rs
os/src/io/: console.rs
os/src/ipc/: mod.rs  rpc.rs
os/src/mm/: address.rs  address_space.rs  frame_allocator.rs  kernel_heap.rs  mod.rs  page_table.rs  range.rs  stack_frame_allocator.rs
os/src/syscall/: fs.rs  id.rs  ipc.rs  mod.rs  proc.rs  rpc.rs
os/src/task/: context.rs  id.rs  manager.rs  mod.rs  processor.rs  scheduler.rs  switch.S  switch.rs  task.rs
os/src/time/: mod.rs  timer_trap.s
os/src/trap/: context.rs  mod.rs  trap.S
spin/src/: lib.rs
user/: Cargo.toml
user/src/: console.rs  lang_items.rs  lib.rs  syscall.rs
