[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
volatile = "0.3"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
allocator = { path = "../allocator" }
spin = { path = "../spin" }
bitflags = "1.2.1"
xmas-elf = "0.7.0"

[profile.release]
debug = true
opt-level = 0
